--- a/iPythonNotebooks/Using_an_SBML_model python3.ipynb
+++ b/iPythonNotebooks/Using_an_SBML_model python3.ipynb
@@ -32,26 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "0858698b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We are logging to /home/redwards/GitHubs/PyFBA/iPythonNotebooks/PyFBA.log\n",
-      "Welcome to PyFBA version 1.1 started at 2021-05-26 16:17:08.637796\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "We are using /home/redwards/GitHubs/PyFBA/PyFBA/Biochemistry/ModelSEEDDatabase/ for our data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -79,10 +63,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "231031c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Fe2 is deprecated. Please use Fe+2 for the name in compound Fe2\n",
+      "Warning: Fe2 is deprecated. Please use Fe+2 for the name in compound Fe2\n",
+      "Warning: Fe3 is deprecated. Please use Fe+2 for the name in compound fe3\n",
+      "Warning: Fe3 is deprecated. Please use Fe+2 for the name in compound fe3\n",
+      "Warning: Fe2 is deprecated. Please use Fe+2 for the name in compound Fe2_b\n",
+      "Warning: Fe3 is deprecated. Please use Fe+2 for the name in compound fe3_b\n"
+     ]
+    }
+   ],
    "source": [
     "sbml = PyFBA.parse.parse_sbml_file(\"../example_data/Citrobacter/Citrobacter_sedlakii.sbml\")"
    ]
@@ -101,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "b58cf1b1",
    "metadata": {},
    "outputs": [
@@ -147,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "63c0678f",
    "metadata": {},
    "outputs": [
@@ -172,6 +169,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "cf825ed4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('rgood.txt', 'w') as out:\n",
+    "    for r in reactions:\n",
+    "        out.write(f\"{r}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "997b54fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' (0.00778132482043096) cpd00063: Ca2 (location: c) +  (0.352889948968272) cpd00156: L_Valine (location: e) +  (0.00778132482043096) cpd00030: Mn2 (location: e) +  (0.00778132482043096) cpd00205: K (location: c) +  (0.428732289454499) cpd00035: L_Alanine (location: e) +  (0.128039715997337) cpd00060: L_Methionine (location: e) +  (0.15480760087483) cpd00066: L_Phenylalanine (location: c) +  (0.00778132482043096) cpd00017: S_Adenosyl_L_methionine (location: c) +  (0.00778132482043096) cpd00010: CoA (location: c) +  (0.0609084652443221) cpd15665: Peptidoglycan_polymer_n_subunits (location: c) +  (0.0841036156544863) cpd00052: CTP (location: c) +  (0.00778132482043096) cpd10516: fe3 (location: e) +  (0.01468498342018) cpd00357: TTP (location: c) +  (0.00778132482043096) cpd00099: Cl_ (location: e) +  (0.01468498342018) cpd00356: dCTP (location: c) +  (0.00778132482043096) cpd10515: Fe2 (location: e) +  (0.00778132482043096) cpd00254: Mg (location: c) +  (0.242249358141304) cpd00322: L_Isoleucine (location: e) +  (0.00778132482043096) cpd00058: Cu2 (location: e) +  (0.00778132482043096) cpd00149: Co2 (location: c) +  (0.201205267995816) cpd00041: L_Aspartate (location: e) +  (1) cpd17043: RNA_transcription (location: c) +  (0.219496655995436) cpd00023: L_Glutamate (location: e) +  (0.219496655995436) cpd00053: L_Glutamine (location: e) +  (0.376088782528765) cpd00107: L_Leucine (location: e) +  (0.00778132482043096) cpd00220: Riboflavin (location: e) +  (0.179790960093822) cpd00054: L_Serine (location: e) +  (0.0472899299502361) cpd00065: L_Tryptophan (location: e) +  (0.0609084652443221) cpd02229: Bactoprenyl_diphosphate (location: c) +  (0.00778132482043096) cpd11493: ACP (location: c) +  (1) cpd17041: Protein_biosynthesis (location: c) +  (0.184698405654696) cpd00129: L_Proline (location: e) +  (0.135406821203723) cpd00038: GTP (location: c) +  (0.01468498342018) cpd00241: dGTP (location: c) +  (1) cpd17042: DNA_replication (location: c) +  (0.211466290532188) cpd00161: L_Threonine (location: e) +  (40.1101757365074) cpd00002: ATP (location: c) +  (0.00778132482043096) cpd00016: Pyridoxal_phosphate (location: c) +  (0.00778132482043096) cpd00048: Sulfate (location: e) +  (0.00778132482043096) cpd00003: NAD (location: c) +  (0.01468498342018) cpd00115: dATP (location: c) +  (0.115101904973216) cpd00069: L_Tyrosine (location: e) +  (0.00778132482043096) cpd00015: FAD (location: c) +  (0.201205267995816) cpd00132: L_Asparagine (location: e) +  (0.00778132482043096) cpd00006: NADP (location: c) +  (35.5386858537513) cpd00001: H2O (location: e) +  (0.0762884719008526) cpd00084: L_Cysteine (location: c) +  (0.0794113918032267) cpd00119: L_Histidine (location: e) +  (0.285970236774541) cpd00039: L_Lysine (location: e) +  (0.0908319049068452) cpd00062: UTP (location: c) +  (0.00778132482043096) cpd00034: Zn2 (location: e) +  (0.247156803702178) cpd00051: L_Arginine (location: e) +  (0.510820469745475) cpd00033: Glycine (location: e) >  (40) cpd00008: ADP (location: c) +  (39.9922186751796) cpd00009: Phosphate (location: e) +  (0.00778132482043096) cpd12370: apo_ACP (location: c) +  (1) cpd11416: Biomass (location: c) +  (40) cpd00067: H (location: e) +  (0.0609084652443221) cpd15666: Peptidoglycan_polymer_n_1_subunits (location: c) +  (0.405833094852252) cpd00012: PPi (location: e)'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "biomass_equation.equation"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "40158ae1",
    "metadata": {},
@@ -183,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "51b74b7f",
    "metadata": {},
    "outputs": [],
@@ -209,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "e303c94a",
    "metadata": {},
    "outputs": [
@@ -238,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "4928888b",
    "metadata": {},
    "outputs": [
@@ -268,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "53af205b",
    "metadata": {},
    "outputs": [
@@ -283,12 +313,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Warning: Fe2 is deprecated. Please use Fe+2 for the name in compound Fe2+\n",
+      "Warning: Fe3 is deprecated. Please use Fe+2 for the name in compound fe3\n",
+      "Checking media compounds: Our compounds do not include  Thiamine phosphate\n",
+      "Checking media compounds: Our compounds do not include  Vitamin B12\n",
       "Checking media compounds: Our compounds do not include  L-Cystine\n",
+      "Checking media compounds: Our compounds do not include  Molybdate\n",
       "Checking media compounds: Our compounds do not include  chromate\n",
       "Checking media compounds: Our compounds do not include  Ni2+\n",
-      "Checking media compounds: Our compounds do not include  Molybdate\n",
-      "Checking media compounds: Our compounds do not include  Vitamin B12\n",
-      "Checking media compounds: Our compounds do not include  Thiamine phosphate\n",
       "Please note: The warnings about media not being found in compounds are not fatal.\n",
       "It just means that we did not find that compound anywhere in the reactions, and so it is unlikely to be\n",
       "needed or used. We typically see a few of these in rich media.\n"
@@ -297,7 +329,7 @@
    ],
    "source": [
     "# Read the media file\n",
-    "media = PyFBA.parse.read_media_file(\"../media/ArgonneLB.txt\")\n",
+    "media = PyFBA.parse.read_media_file(\"/home/redwards/.local/lib/python3.9/site-packages/PyFBA-2.1-py3.9.egg/PyFBA/Biochemistry/media/ArgonneLB.txt\")\n",
     "# Correct the names\n",
     "media = sbml.correct_media(media)\n",
     "print(f\"The media has {len(media)} compounds\")"
@@ -305,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "6320d3ef",
    "metadata": {},
    "outputs": [
@@ -333,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "2d7becdc",
    "metadata": {},
    "outputs": [],
@@ -362,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "00a2e0c5",
    "metadata": {},
    "outputs": [
@@ -378,7 +410,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The FBA completed with a flux value of 486.54008183384207 --> growth: True\n"
+      "The FBA completed with a flux value of 486.54008183384224 --> growth: True\n"
      ]
     },
     {
@@ -413,9 +445,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -427,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
