Reanmed ModelSeed to ModelData

--- a/iPythonNotebooks/Reconstruct SBML From Scratch.ipynb
+++ b/iPythonNotebooks/Reconstruct SBML From Scratch.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "# Read the Reactions, Enzymes, and Compounds Sets\n",
     "\n",
-    "This parses the ModelSeed data"
+    "This parses the ModelData data"
    ]
   },
   {
