--- a/iPythonNotebooks/Using_an_SBML_model.ipynb
+++ b/iPythonNotebooks/Using_an_SBML_model.ipynb
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "We are logging to /home/redwards/GitHubsLinux/PyFBA/iPythonNotebooks/logs/PyFBA.2021-06-16T09:55:41.168166.log\n"
+      "We are logging to /home/redwards/GitHubsLinux/PyFBA/iPythonNotebooks/logs/PyFBA.2021-06-16T10:19:22.389049.log\n"
      ]
     }
    ],
@@ -210,12 +210,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get a dict of compounds. \n",
-    "# The key is the string representation of the compound and\n",
-    "# the value is a metabolite.compound.Compound object\n",
-    "# Get a dict of compounds. \n",
-    "# The key is the string representation of the compound and\n",
-    "# the value is a metabolite.compound.Compound object\n",
     "all_compounds = sbml.compounds\n",
     "# Filter for compounds that are boundary compounds\n",
     "filtered_compounds = set()\n",
@@ -307,13 +301,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Checking media compounds: Our compounds do not include  chromate\n",
       "Checking media compounds: Our compounds do not include  Vitamin B12\n",
+      "Checking media compounds: Our compounds do not include  chromate\n",
       "Checking media compounds: Our compounds do not include  Molybdate\n",
+      "Checking media compounds: Our compounds do not include  L-Cystine\n",
+      "Checking media compounds: Our compounds do not include  Fe3+\n",
       "Checking media compounds: Our compounds do not include  Ni2+\n",
       "Checking media compounds: Our compounds do not include  Thiamine phosphate\n",
-      "Checking media compounds: Our compounds do not include  Fe3+\n",
-      "Checking media compounds: Our compounds do not include  L-Cystine\n",
       "Please note: The warnings about media not being found in compounds are not fatal.\n",
       "It just means that we did not find that compound anywhere in the reactions, and so it is unlikely to be\n",
       "needed or used. We typically see a few of these in rich media.\n"
@@ -371,11 +365,12 @@
     "    for c in uptake_secretion_reactions[u].all_compounds():\n",
     "        if c in media:\n",
     "            is_media_component = True\n",
-    "    if not is_media_component:\n",
-    "        reactions[u].lower_bound = 0.0\n",
-    "        uptake_secretion_reactions[u].lower_bound = 0.0\n",
+    "\n",
     "    if is_media_component:\n",
     "        mcr += 1\n",
+    "    else:\n",
+    "        reactions[u].lower_bound = 0.0\n",
+    "        uptake_secretion_reactions[u].lower_bound = 0.0\n",
     "        # these are the reactions that allow the media components to flux\n",
     "        # print(f\"{u} {sbml.reactions[u].equation}  ({sbml.reactions[u].lower_bound}, {sbml.reactions[u].upper_bound})\")\n",
     "print(f\"There are {mcr} reactions (out of {len(uptake_secretion_reactions)}) with a media component\")"
@@ -401,12 +396,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "csm did not find media compound chromate in the compounds database\n",
       "csm did not find media compound Vitamin B12 in the compounds database\n",
+      "csm did not find media compound chromate in the compounds database\n",
       "csm did not find media compound Molybdate in the compounds database\n",
-      "csm did not find media compound Thiamine phosphate in the compounds database\n",
-      "csm did not find media compound Fe3+ in the compounds database\n",
       "csm did not find media compound L-Cystine in the compounds database\n",
+      "csm did not find media compound Fe3+ in the compounds database\n",
+      "csm did not find media compound Thiamine phosphate in the compounds database\n",
       "csm did not find media compound Ni2+ in the compounds database\n",
       "We are loading 1320 rows and 1574 columns\n"
      ]
@@ -415,7 +410,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The FBA completed with a flux value of 281.7387771117252 --> growth: True\n"
+      "The FBA completed with a flux value of 281.7387771116904 --> growth: True\n"
      ]
     },
     {
@@ -434,8 +429,7 @@
    ],
    "source": [
     "ms = PyFBA.model_seed.ModelData(compounds = filtered_compounds, reactions = reactions)\n",
-    "status, value, growth = PyFBA.fba.run_fba(ms,\n",
-    "                                          reactions_to_run, media, biomass_equation,\n",
+    "status, value, growth = PyFBA.fba.run_fba(ms, reactions_to_run, media, biomass_equation,\n",
     "                                          uptake_secretion_reactions, verbose=True)\n",
     "print(\"The FBA completed with a flux value of {} --> growth: {}\".format(value, growth))\n"
    ]
@@ -476,12 +470,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "csm did not find media compound chromate in the compounds database\n",
       "csm did not find media compound Vitamin B12 in the compounds database\n",
+      "csm did not find media compound chromate in the compounds database\n",
       "csm did not find media compound Molybdate in the compounds database\n",
-      "csm did not find media compound Thiamine phosphate in the compounds database\n",
-      "csm did not find media compound Fe3+ in the compounds database\n",
       "csm did not find media compound L-Cystine in the compounds database\n",
+      "csm did not find media compound Fe3+ in the compounds database\n",
+      "csm did not find media compound Thiamine phosphate in the compounds database\n",
       "csm did not find media compound Ni2+ in the compounds database\n",
       "We are loading 1320 rows and 1574 columns\n"
      ]
@@ -490,7 +484,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The FBA completed with a flux value of 281.7387771117252 --> growth: True\n"
+      "The FBA completed with a flux value of 281.7387771116904 --> growth: True\n"
      ]
     },
     {
